--- a/lib/bus_app/todo.txt
+++ b/lib/bus_app/todo.txt
@@ -4,6 +4,7 @@ ETAP 1
 //kontakt - prosty
     ---- email/tel - odnosnik po kliknieciu
 oferta - prosta - 3 busy i krotkie info + zdjecia
+    - tutaj zaczac - rozwazycz stateful jako web pages
 
 rozklad - na wejsciu rozklad spychowo - szczytno
     prawidlowe dane
