--- a/lib/bus_app/todo.txt
+++ b/lib/bus_app/todo.txt
@@ -1,39 +1,27 @@
 ---------------------------
 ETAP 1
 
-//kontakt - prosty
-    ---- email/tel - odnosnik po kliknieciu
-//oferta - prosta - 3 busy i krotkie info + zdjecia
 
-rozklad -
-    //na wejsciu rozklad spychowo - szczytno
-    //oznaczenie wybranego rozkladu
+strona glowna -
+    do oferty, - zaczac tutaj
+    do kontaktu
+belka gorna - wybierz telefou
+rozkład - wyszukiwarka
 
 żeby linki działały
-
-aktualnosci - pierwsza informacja przykladowa
-    ----- aktualnosci to artykuly - jest lista i mozna wejsc w artykul ? - na potem
-
-strona glowna - do oferty, do kontaktu
-
-belka gorna - wybierz telefou
-
-
 wersja desktop
-menu belka gorna, paddingi itp
-
-wersja ciemna skorki
-
-usprawnienie ładowania - na poczatku aplikacji zaladowac wszystkie dane do stron - wtdy chodzenie po stronach jest bez ładowania
-    czyli przechoze po stronach i wyswietlam to co pobralem na poczaktu
-    jak aktualizowac? co kazde przejscie na stronie, ładuje to co jest, ale dodatkowo wyslam zapytanie o zmiany - jesli zmiany sa
-    pojawi sie podswietlenie przy danej pozycji menu - ze sa nowe dane
-    dodatkowo, aplikacja co 2 min robi ping - czy sa zmiany
 
 htaccess - wszystko powinno kierowac na strone index.html, zeby dzialalo wklejanie linkow i chodzenie do tylu
 zeby dziala aplikacja jaka mozna zainstlowac ze strony
 
 wykupienie domeny
+
+uzupelnienie danymi statycznymi
+
+--
+
+rozkłady - legenda
+aktualnosci
 -----------------------------------------
 
 ETAP 2
@@ -42,3 +30,14 @@ dynamiczne pobieranie danych,
 admin
 wyszukiwanie kursow?
 kontakt - mapka google?
+
+kontakt email/tel - odnosnik po kliknieciu
+oferta -  podglad zdjec - slider + skalowanie
+
+wersja ciemna skorki
+
+usprawnienie ładowania - na poczatku aplikacji zaladowac wszystkie dane do stron - wtdy chodzenie po stronach jest bez ładowania
+    czyli przechoze po stronach i wyswietlam to co pobralem na poczaktu
+    jak aktualizowac? co kazde przejscie na stronie, ładuje to co jest, ale dodatkowo wyslam zapytanie o zmiany - jesli zmiany sa
+    pojawi sie podswietlenie przy danej pozycji menu - ze sa nowe dane
+    dodatkowo, aplikacja co 2 min robi ping - czy sa zmiany
