--- a/lib/bus_app/todo.txt
+++ b/lib/bus_app/todo.txt
@@ -1,30 +1,39 @@
 ---------------------------
 ETAP 1
 
-żeby linki działały
-belka gorna - wybierz telefou
-uzupelnienie danymi
-htaccess
+aplikacja admin - rownolegle
 
 wersja desktop
 
-htaccess - wszystko powinno kierowac na strone index.html, zeby dzialalo wklejanie linkow i chodzenie do tylu
-zeby dziala aplikacja jaka mozna zainstlowac ze strony
+wyszukiwarka kursow
+    zapamietanie ostatnio wyszukiwanego kursu w formie wyswietlnie domyslnego kursu, ktory sie sprawdza
 
-wykupienie domeny
+powiekszenie zdjecia w ofercie - jako link? - wtedy bedzie dzialac dobrze wstecz
+    zakmnij - jako przycisk
 
-uzupelnienie danymi statycznymi
+wykupienie domeny - z pomocą J
 
---
+? aktualnosci
 
-rozkłady - legenda
-aktualnosci
+aplikacja admin do zarzadzania
+    ustawianie kursow - dodawanie kursu / linii; wlaczanie wyłączanie linii
+    dodawanie autobusow - zdjec, nazw, opisow, miejsc
+    kontakt
+    info na stronie glownej
 -----------------------------------------
 
 ETAP 2
 
+wersja ciemna skorki
+
+oferta - usunac loader
+
+home slider - paralax
+
 home - widget w ktorym mozna podac stacje startowa i koncowa - i wyswietla odjazdy z tej stacji
 rozkład - wyszukiwarka
+
+oferta - slider dla powiekszonego zdjecia oraz cofniecie - wyjscie ze zdjecia
 
 dynamiczne pobieranie danych,
 admin
@@ -34,7 +43,7 @@ kontakt - mapka google?
 kontakt email/tel - odnosnik po kliknieciu
 oferta -  podglad zdjec - slider + skalowanie
 
-wersja ciemna skorki
+
 
 usprawnienie ładowania - na poczatku aplikacji zaladowac wszystkie dane do stron - wtdy chodzenie po stronach jest bez ładowania
     czyli przechoze po stronach i wyswietlam to co pobralem na poczaktu
