bsxmobile - hive local storage

--- a/lib/bsxmobile/todo.txt
+++ b/lib/bsxmobile/todo.txt
@@ -1,4 +1,6 @@
 
+utworzyc prywatne repo , a publiczne usunac!
+
 zaczac od CoreRepo
 skupic sie na zrobieniu pierwszego zapytania - verify cloud key
 
