--- a/lib/bsxmobile/todo.txt
+++ b/lib/bsxmobile/todo.txt
@@ -1,4 +1,8 @@
+naniosłem poprawki do repository - poprawic hive repository o poprawki oraz hive local storage w oparciu o te poprawki
+
 utworzenie biblioteki, zamiast robienia wszedzie importow, np bsxmobile_library oraz utils_library
+
+mockowe api, aby moc sie zalogowac
 
 
 utworzyc prywatne repo , a publiczne usunac!
